Processos da Api
TODO: Converter o valor de X(Unix Timestamp) para Date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ChartCoin</string>
     <string name="chartcoin_splash_name">ChartCoin</string>
     <string name="splash_screen_image">splash_screen_image</string>
+    <string name="bitcoin_defaultValue">U$ 0,00</string>
 </resources>
