--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="chartcoin_splash_name">ChartCoin</string>
     <string name="splash_screen_image">splash_screen_image</string>
     <string name="bitcoin_defaultValue">U$ 0,00</string>
+    <string name="cotacao_atual">Cotação Atual</string>
 </resources>
