Adicionada em tela variação da moeda em relação a penultima cotação.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChartCoin</string>
+    <string name="app_name">Chart Coin</string>
     <string name="chartcoin_splash_name">ChartCoin</string>
     <string name="splash_screen_image">splash_screen_image</string>
     <string name="bitcoin_defaultValue">US$ 0,00</string>
@@ -7,4 +7,6 @@
     <string name="usd">USD</string>
     <string name="brl">BRL</string>
     <string name="eur">EUR</string>
+    <string name="varia_o_da_moeda">Variação da Moeda</string>
+    <string name="string_porcentagem">0.00%</string>
 </resources>
